--- a/src/app/components/profil/profil.component.html
+++ b/src/app/components/profil/profil.component.html
@@ -6,7 +6,7 @@
   <ng-template #page> -->
   <div
     class="rounded-md bg-black/30 backdrop-blur-[64px] shadow-lg ring-1 ring-white/10">
-    <p-tabs [value]="tabs[0].route" scrollable="true">
+    <p-tabs [value]="activeRoute" scrollable="true">
       <p-tablist>
         @for (tab of tabs; track tab.route) {
           <p-tab [value]="tab.route" [routerLink]="tab.route">
